--- a/config/models.toml
+++ b/config/models.toml
@@ -1,4 +1,81 @@
-# OpenAI Models
+################################################################################
+# O P E N   R O U T E R   M O D E L S
+#
+# Note: Going forward, we'll just use OpenRouter as its much more convenient
+# than juggling a bunch of different API keys for different services.
+#
+################################################################################
+
+["or_qwen2_5_vl_72b_instruct"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "qwen/qwen2.5-vl-72b-instruct"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Qwen2.5 VL 72B Instruct"
+
+["or_qwen_vl_plus"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "qwen/qwen-vl-plus"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Qwen VL Plus"
+
+["or_qwen_vl_max"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "qwen/qwen-vl-max"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Qwen VL Max"
+
+["or_mistral_small_3_1_24b_instruct"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "mistralai/mistral-small-3.1-24b-instruct"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Mistral Small 3.1 24B"
+
+["or_phi_4_multimodal_instruct"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "microsoft/phi-4-multimodal-instruct"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Phi 4 Multimodal Instruct"
+
+["or_gemini_2_5_pro_preview_03_25"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "google/gemini-2.5-pro-preview-03-25"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Gemini 2.5 Pro Preview 3/25"
+
+["or_gemma_3_27b_it"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "google/gemma-3-27b-it"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Gemma 3 27B"
+
+["or_claude_3_7_sonnet"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "anthropic/claude-3.7-sonnet"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Claude 3.7 Sonnet"
+
+["or_llama_3_2_90b_vision_instruct"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "meta-llama/llama-3.2-90b-vision-instruct"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Llama 3.2 90B Vision Instruct"
+
+["or_chatgpt_4o_latest"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "openai/chatgpt-4o-latest"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Open Router: ChatGPT-4o"
+
+["or_gemini_2_0_flash_001"]
+endpoint = "https://openrouter.ai/api/v1"
+model_name = "google/gemini-2.0-flash-001"
+api_key = "${OPEN_ROUTER_API_KEY}"
+logical_name = "Google: Gemini 2.0 Flash"
+
+################################################################################
+# O P E N   A I   M O D E L S
+################################################################################
+
 [gpt-4o]
 endpoint = "https://api.openai.com/v1"
 model_name = "gpt-4o"
@@ -17,34 +94,18 @@ model_name = "gpt-4-turbo"
 api_key = "${OPENAI_API_KEY}"
 logical_name = "GPT-4 Turbo"
 
-[gpt-4.5-preview]
+["gpt-4.5-preview"]
 endpoint = "https://api.openai.com/v1"
 model_name = "gpt-4.5-preview"
 api_key = "${OPENAI_API_KEY}"
 logical_name = "GPT-4.5 Preview"
 
-# Anthropic Models
+################################################################################
+# A N T H R O P I C   M O D E L S
+################################################################################
+
 [claude-3-7-sonnet-latest]
 endpoint = "https://api.anthropic.com/v1"
-model_name = "claude-3-7-sonnet-20240307"
+model_name = "claude-3-7-sonnet-latest"
 api_key = "${ANTHROPIC_API_KEY}"
 logical_name = "Claude 3.7 Sonnet"
-
-# Google Models
-[gemini-2.5-pro-preview]
-endpoint = "https://generativelanguage.googleapis.com/v1"
-model_name = "gemini-2.5-pro-preview-03-25"
-api_key = "${GOOGLE_API_KEY}"
-logical_name = "Gemini 2.5 Pro Preview"
-
-[gemini-2.0-flash]
-endpoint = "https://generativelanguage.googleapis.com/v1"
-model_name = "gemini-2.0-flash"
-api_key = "${GOOGLE_API_KEY}"
-logical_name = "Gemini 2.0 Flash"
-
-[gemini-2.0-flash-lite]
-endpoint = "https://generativelanguage.googleapis.com/v1"
-model_name = "gemini-2.0-flash-lite"
-api_key = "${GOOGLE_API_KEY}"
-logical_name = "Gemini 2.0 Flash Lite"
