--- a/config/models.toml
+++ b/config/models.toml
@@ -70,37 +70,37 @@ logical_name = "Llama 4 Scout"
 endpoint = "https://openrouter.ai/api/v1"
 model_name = "openai/o1-pro"
 api_key = "${OPEN_ROUTER_API_KEY}"
-logical_name = "OpenAI o1-pro"
+logical_name = "OpenAI o1-pro (OR)"
 
 ["or_gpt_4o_mini"]
 endpoint = "https://openrouter.ai/api/v1"
 model_name = "openai/gpt-4o-mini"
 api_key = "${OPEN_ROUTER_API_KEY}"
-logical_name = "GPT-4o-mini"
+logical_name = "GPT-4o-mini (OR)"
 
 ["or_gpt_4_turbo"]
 endpoint = "https://openrouter.ai/api/v1"
 model_name = "openai/gpt-4-turbo"
 api_key = "${OPEN_ROUTER_API_KEY}"
-logical_name = "GPT-4o"
+logical_name = "GPT-4o (OR)"
 
 ["or_gpt_4o_2024_11_20"]
 endpoint = "https://openrouter.ai/api/v1"
 model_name = "openai/gpt-4o-2024-11-20"
 api_key = "${OPEN_ROUTER_API_KEY}"
-logical_name = "GPT-4o (2024-11-20)"
+logical_name = "GPT-4o (2024-11-20 OR)"
 
 ["or_chatgpt_4o_latest"]
 endpoint = "https://openrouter.ai/api/v1"
 model_name = "openai/chatgpt-4o-latest"
 api_key = "${OPEN_ROUTER_API_KEY}"
-logical_name = "ChatGPT-4o"
+logical_name = "ChatGPT-4o (OR)"
 
 ["or_gpt_4_5_preview"]
 endpoint = "https://openrouter.ai/api/v1"
 model_name = "openai/gpt-4.5-preview"
 api_key = "${OPEN_ROUTER_API_KEY}"
-logical_name = "GPT-4.5 Preview"
+logical_name = "GPT-4.5 Preview (OR)"
 
 # Gemini and Gemma Family ########
 
